...

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/profile_image_edit"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:background="@drawable/circle_profile_background"
                            android:clipToOutline="true"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_person_black_24dp" />
...
                            android:layout_centerVertical="true"
                            android:layout_marginStart="16dp"
                            android:layout_toEndOf="@id/profile_image_edit"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/nameofuser"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="John Doe"
                                android:textColor="#203434"
                                android:textSize="22sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/usernameofuser"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="\@Johndoe"
                                android:textColor="#2E4545"
                                android:textSize="16sp" />

...
                                android:orientation="horizontal">


                            </LinearLayout>

                            <com.google.android.material.button.MaterialButton
                                android:id="@+id/edit_profile_button"
                                android:layout_width="wrap_content"
                                android:layout_height="36dp"
                                android:layout_marginTop="-7dp"
                                android:text="Edit Profile"
                                android:textColor="#F5F5DC"
                                android:textSize="12sp"
...
                                app:iconSize="16dp"
                                app:iconTint="#F5F5DC" />
                        </LinearLayout>
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/bioofuser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="Bio"
                        android:textColor="#203434"
                        android:textSize="14sp" />
...
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/followers_count"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="1.2K"
                                android:textColor="#203434"
                                android:textSize="18sp"
                                android:textStyle="bold" />
...
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/following_count"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="850"
                                android:textColor="#203434"
                                android:textSize="18sp"
                                android:textStyle="bold" />
...
                                android:layout_width="130dp"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/pending_button"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="0"
                                    android:textColor="#203434"
                                    android:textSize="18sp"
                                    android:textStyle="bold" />
...
