...
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp">

                <ImageView
                    android:id="@+id/profile_pic"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="Profile picture"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_person_black_24dp" />
            </androidx.cardview.widget.CardView>
...
